[package]
name = "steam-workshop"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
ez-stream = { git = "https://github.com/Seeker14491/ez-stream.git", rev = "4ab4ed90e4d5d472f38ce6a418ffffa5da0552df" }
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["gzip", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
